--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,12 @@
 			<artifactId>modelmapper</artifactId>
 			<version>2.4.4</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+            <version>5.2.11.RELEASE</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
